// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Perform Update at FACAD-Reports over a Row 1`] = `
Object {
  "Info": Object {
    "Actions": Object {
      "Delete": true,
      "Insert": true,
      "Update": true,
    },
    "Fields": Array [
      Object {
        "Combobox": null,
        "Editable": false,
        "Name": "ID",
        "Primary": true,
        "Required": false,
        "Select": null,
        "Type": "Number",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Name",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "BuiltInCategory",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "PathName",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
    ],
  },
  "Requests": Array [],
  "Rows": Array [
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 19,
      "Name": "1ssssxdd",
      "PathName": "12121sdgcw",
    },
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 22,
      "Name": "csdcs",
      "PathName": "sdsd",
    },
  ],
  "Subscribed": true,
}
`;

exports[`Perform Update at FACAD-Reports over a Row 2`] = `
Object {
  "Info": Object {
    "Actions": Object {
      "Delete": true,
      "Insert": true,
      "Update": true,
    },
    "Fields": Array [
      Object {
        "Combobox": null,
        "Editable": false,
        "Name": "ID",
        "Primary": true,
        "Required": false,
        "Select": null,
        "Type": "Number",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Name",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "BuiltInCategory",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "PathName",
        "Primary": false,
        "Required": true,
        "Select": null,
        "Type": "String",
      },
    ],
  },
  "Requests": Array [
    "3eff0c6b-e248-41bc-bc8f-d5233f881e1c",
  ],
  "Rows": Array [
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 19,
      "Name": "1ssssxdd",
      "PathName": "12121sdgcw",
    },
    Object {
      "BuiltInCategory": "INVALID",
      "ID": 22,
      "Name": "csdcs",
      "PathName": "sdsd",
    },
  ],
  "Subscribed": true,
}
`;

exports[`Perform Update at FACAD-Reports over a Row 3`] = `
Array [
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 19,
    "Name": "1ssssxdd",
    "PathName": "12121sdgcw",
  },
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 22,
    "Name": "csdcs",
    "PathName": "sdsd",
  },
]
`;

exports[`Perform Update at FACAD-preCFT-AAU-Key over a Row with different Row and PK 1`] = `
Array [
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 19,
    "Name": "modified name",
    "PathName": "12121sdgcw",
  },
  Object {
    "BuiltInCategory": "INVALID",
    "ID": 22,
    "Name": "csdcs",
    "PathName": "sdsd",
  },
]
`;

exports[`Perform Update at FACAD-preCFT-AAU-Key over a Row with different Row and PK 2`] = `
Object {
  "Info": Object {
    "Actions": Object {
      "Delete": false,
      "Insert": false,
      "Update": true,
    },
    "Fields": Array [
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Family",
        "Primary": true,
        "Required": true,
        "Select": null,
        "Type": "Text",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Type",
        "Primary": true,
        "Required": true,
        "Select": null,
        "Type": "Text",
      },
      Object {
        "Combobox": Object {
          "Display": "Description",
          "Params": Object {
            "Key": "Key",
          },
          "Source": "AAU",
          "Value": "Key",
        },
        "Editable": true,
        "Name": "Key",
        "Primary": true,
        "Required": true,
        "Select": null,
        "Type": "Text",
      },
    ],
  },
  "Requests": Array [],
  "Rows": Array [
    Object {
      "Family": "Concrete",
      "Key": null,
      "Type": "Concreto Muro de contencion",
    },
    Object {
      "Family": "Concrete",
      "Key": null,
      "Type": "enchape pared ceramica 25x35",
    },
    Object {
      "Family": "Concrete-Round-Column_16110 (1)",
      "Key": null,
      "Type": "pilote d=50",
    },
  ],
  "Subscribed": true,
}
`;

exports[`Perform Update at FACAD-preCFT-AAU-Key over a Row with different Row and PK 3`] = `
Object {
  "Info": Object {
    "Actions": Object {
      "Delete": false,
      "Insert": false,
      "Update": true,
    },
    "Fields": Array [
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Family",
        "Primary": true,
        "Required": true,
        "Select": null,
        "Type": "Text",
      },
      Object {
        "Combobox": null,
        "Editable": true,
        "Name": "Type",
        "Primary": true,
        "Required": true,
        "Select": null,
        "Type": "Text",
      },
      Object {
        "Combobox": Object {
          "Display": "Description",
          "Params": Object {
            "Key": "Key",
          },
          "Source": "AAU",
          "Value": "Key",
        },
        "Editable": true,
        "Name": "Key",
        "Primary": true,
        "Required": true,
        "Select": null,
        "Type": "Text",
      },
    ],
  },
  "Requests": Array [
    "61bb4f24-a89d-40d8-970a-f393dd3eb207",
  ],
  "Rows": Array [
    Object {
      "Family": "Concrete",
      "Key": null,
      "Type": "Concreto Muro de contencion",
    },
    Object {
      "Family": "Concrete",
      "Key": null,
      "Type": "enchape pared ceramica 25x35",
    },
    Object {
      "Family": "Concrete-Round-Column_16110 (1)",
      "Key": null,
      "Type": "pilote d=50",
    },
  ],
  "Subscribed": true,
}
`;

exports[`Perform Update at FACAD-preCFT-AAU-Key over a Row with different Row and PK 4`] = `
Array [
  Object {
    "Family": "Concrete",
    "Key": "1.3.1",
    "Type": "Concreto Muro de contencion",
  },
  Object {
    "Family": "Concrete",
    "Key": null,
    "Type": "enchape pared ceramica 25x35",
  },
  Object {
    "Family": "Concrete-Round-Column_16110 (1)",
    "Key": null,
    "Type": "pilote d=50",
  },
]
`;
